# post-training

./: .gitignore  README.md  config.py  ift.ipynb  logs.md  pyproject.toml  test.txt  train.py  train_prm.py  utils.py
ift/: README.md  config.py  config.yaml  ift.ipynb  train.py  util.py
policy_gradients/: config.py  reinforce.yaml  rollout.py  train.py  utils.py
reward_models/: __init__.py  base_rm.py  config.py  config.yaml  text.txt  train_pref_rm.py  utils.py
reward_models/preference_rm/: README.md  config.py  config.yaml  reward_bench_v2.py  train_pref_rm.py  utils.py
reward_models/process_rm/: README.md  train_prm.py
