[project]
name = "learn-rlhf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "reasoning-gym>=0.1.25",
    "rich>=15.0.0",
    "tensordict>=0.13.0",
    "torch==2.8.0",
    "transformers>=5.9.0",
    "wandb>=0.23.0",
]
